Fix EPUB paginated mode in Safari
- column-fill doesn't work unless prefixed?
- column-count isn't interpreted like in other browsers when it comes to
  overflow. If there's too much content to fit inside <count> columns,
  Firefox and Chrome will overflow horizontally and create more columns,
  but Safari will overflow vertically. So we go back to clunky column-width.

--- a/src/dom/epub/stylesheets/content.css
+++ b/src/dom/epub/stylesheets/content.css
@@ -94,6 +94,7 @@ body.flow-mode-paginated > .sections {
 	max-height: calc(100vh - 80px);
 	margin-inline: auto;
 	column-fill: auto;
+    -webkit-column-fill: auto;
 	column-gap: 60px;
 	overflow: hidden;
 	overscroll-behavior: none;
@@ -101,17 +102,19 @@ body.flow-mode-paginated > .sections {
 
 body.flow-mode-paginated > .sections.spread-mode-none {
 	max-width: 800px;
-	column-count: 1;
+    column-width: 800px;
 	column-gap: 100vw;
 }
 
 body.flow-mode-paginated > .sections.spread-mode-odd {
-	column-count: 2;
+	column-width: calc(50vw - 80px);
 }
 
 @media (max-width: 800px) {
 	body.flow-mode-paginated > .sections {
-		column-count: 1;
+        max-width: 800px;
+        column-width: 800px;
+        column-gap: 100vw;
 	}
 }
 
